# home-assistant-frank_energie

./: .gitignore  .lycheeignore  CLAUDE.md  LICENSE.md  README.md  coderabbit.yaml  conftest.py  docusaurus.config.js  errors.prompt.yml  hacs.json  kodiak.toml  pyproject.toml  requirements.txt  sonar-project.properties
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: backlog_item.md
.github/helpers/: update_manifest.py
.github/workflows/: Hassfest.yml  add_to_backlog.yml  ci.yaml  claude.yml  dependabot-auto-merge.yml  deploy.yaml  label.yml  link-check.yml  quality_scale.yml  release.yml  ruff.yml  validate.yml
SPECS/: architecture_spec.md  redact_spec.md  update_frequency_policy.md  zoneinfo_usage_spec.md
config/: configuration.yaml
custom_components/frank_energie/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  (+16 more)
docs/: Documentation Structure.md  architecture.md  configuration.md  developer.md  diagnostics.md  entities.md  events.md  examples.md  faq.md  index.md  release_process.md  smart_battery.md  smart_charging.md  support.md  troubleshooting.md  update_frequency.md  user_features.md
tests/: conftest.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_datetime.py  test_diagnostics.py  test_helpers.py  test_init.py  test_number.py  test_price_cache.py  test_select.py  test_sensor.py  test_smart_feature_keys.py  test_switch.py  test_translations.py  tets_coordinator.py  utils.py
(+6 files in other folders)
