[tool.poetry]
name = "home-assistant-frank_energie"
version = "2026.6.29"
description = "A custom Home Assistant integration for Frank Energie."
authors = ["HiDiHo <hidiho@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.13"
python-frank-energie = "^2026.6.29"

[tool.poetry.dev-dependencies]
pytest = "^9.0"
flake8 = "^7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

